Changes for deploy

--- a/inbox-assistant-backend/requirements.txt
+++ b/inbox-assistant-backend/requirements.txt
@@ -5,3 +5,4 @@ spacy
 google-genai
 python-multipart
 pydantic
+pt-core-news-sm @ https://github.com/explosion/spacy-models/releases/download/pt_core_news_sm-3.8.0/pt_core_news_sm-3.8.0-py3-none-any.whl
